--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
   <h1>{{ page.title }}</h1>
 
   <div class="date">
-    Written on {{ page.date | date: "%Y-%M-%D" }}
+    Written on {{ page.date | date: "%Y-%m-%d" }}
   </div>
 
   <div class="entry">
