--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,4 +1,4 @@
-{% if site.disqus %}
+{% if page.comment %}
 <div class="comments">
 	<div id="disqus_thread"></div>
 	<script type="text/javascript">
