--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,5 +1,4 @@
-<!--disqus.html-->
-{% if page.comment %}
+{% if site.disqus %}
 <div class="comments">
 	<div id="disqus_thread"></div>
 	<script type="text/javascript">
