--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@ layout: default
   </div>
 
   <div class="tag">
-    {% for tag in tags %}
+    {% for tag in post.tags %}
       <a href="{{ site.baseurl }}/tags#{{ tag | slugize }}">{{ tag }} </a>
     {% endfor %}
   </div>
