--- a/_layouts/slide.html
+++ b/_layouts/slide.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <style type="text/css">
+    <meta charset="utf-8">
+    <title>{{ page.title | strip_html }}</title>
+    <style>
       @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
       @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
       @import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
@@ -17,12 +17,13 @@
     </style>
   </head>
   <body>
-    <script src="https://gnab.github.io/remark/downloads/remark-latest.min.js">
+    <textarea id="source">
+{% include slides/{{ page.slide }} %}
+    </textarea>
+    <script src="https://gnab.github.io/remark/downloads/remark-latest.min.js" type="text/javascript">
     </script>
-    <script>
-        var slideshow = remark.create({
-            sourceUrl: '{{ page.source }}'
-        });
+    <script type="text/javascript">
+      var slideshow = remark.create({navigation: {scroll: false,}});
     </script>
   </body>
 </html>
