--- a/_layouts/slide.html
+++ b/_layouts/slide.html
@@ -23,7 +23,7 @@
     <script src="https://gnab.github.io/remark/downloads/remark-latest.min.js" type="text/javascript">
     </script>
     <script type="text/javascript">
-      var slideshow = remark.create({navigation: {scroll: false,}});
+      var slideshow = remark.create();
     </script>
   </body>
 </html>
