--- a/_layouts/slide.html
+++ b/_layouts/slide.html
@@ -22,6 +22,9 @@
         width: 50%;
         float: right;
       }
+      .small {
+        font-size: 60%;
+      }
     </style>
   </head>
   <body>
