--- a/_layouts/slide.html
+++ b/_layouts/slide.html
@@ -23,7 +23,7 @@
         float: right;
       }
       .small {
-        font-size: 0.6em;
+        font-size: small;
       }
     </style>
   </head>
