--- a/_layouts/slide.html
+++ b/_layouts/slide.html
@@ -13,7 +13,10 @@
         font-family: 'Yanone Kaffeesatz';
         font-weight: normal;
       }
-      .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
+      .remark-code, .remark-inline-code {
+        font-family: 'Ubuntu Mono';
+        font-size: small;
+      }
       .left-column {
         width: 50%;
         float: left;
