--- a/_layouts/slide.html
+++ b/_layouts/slide.html
@@ -13,10 +13,8 @@
         font-family: 'Yanone Kaffeesatz';
         font-weight: normal;
       }
-      .remark-code, .remark-inline-code {
-        font-family: 'Ubuntu Mono';
-        font-size: small;
-      }
+      .remark-code, { font-family: 'Ubuntu Mono'; font-size: small; }
+      .remark-inline-code { font-family: 'Ubuntu Mono'; }
       .left-column {
         width: 50%;
         float: left;
