--- a/_layouts/slide.html
+++ b/_layouts/slide.html
@@ -13,8 +13,7 @@
         font-family: 'Yanone Kaffeesatz';
         font-weight: normal;
       }
-      .remark-code, { font-family: 'Ubuntu Mono'; font-size: small; }
-      .remark-inline-code { font-family: 'Ubuntu Mono'; }
+      .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
       .left-column {
         width: 50%;
         float: left;
@@ -23,7 +22,7 @@
         width: 50%;
         float: right;
       }
-      .small {
+      .div-small {
         font-size: small;
       }
     </style>
