--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,8 @@ html {
 
 body {
 	background: $white;
-  font: 18px/1.4 $helvetica;
+  font: 16px/1.4 $helvetica;
+  line-height: 1.7
   color: $darkGray;
 }
 
