--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -1,13 +1,15 @@
 
 .highlight {
   background-color: #efefef;
-  padding: 7px 7px 7px 10px;
-  border: 1px solid #ddd;
+/*  padding: 7px 7px 7px 10px;*/
+/*  border: 1px solid #ddd;*/
   -moz-box-shadow: 3px 3px rgba(0,0,0,0.1);
   -webkit-box-shadow: 3px 3px rgba(0,0,0,0.1);
   box-shadow: 3px 3px rgba(0,0,0,0.1);
-  margin: 20px 0 20px 0;
+/*  margin: 20px 0 20px 0;*/
   overflow: scroll;
+  font-size: 16pt;
+  line-height: 1.4;
 }
 
 code {
