--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -3,12 +3,12 @@
   background-color: #efefef;
 /*  padding: 7px 7px 7px 10px;*/
 /*  border: 1px solid #ddd;*/
-  -moz-box-shadow: 3px 3px rgba(0,0,0,0.1);
+/*  -moz-box-shadow: 3px 3px rgba(0,0,0,0.1);
   -webkit-box-shadow: 3px 3px rgba(0,0,0,0.1);
-  box-shadow: 3px 3px rgba(0,0,0,0.1);
+  box-shadow: 3px 3px rgba(0,0,0,0.1); */
 /*  margin: 20px 0 20px 0;*/
   overflow: scroll;
-  font-size: 16px;
+  font-size: 12px;
   line-height: 1.4;
 }
 
