--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,6 +15,13 @@ layout: default
     {% endfor %}
   </div>
 
+  <style type="text/css">
+    <!--
+    table {border: 1pt;}
+    -->
+  </style>
+
+
   <div class="entry">
     {{ content }}
   </div>
