--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,7 +17,7 @@ layout: default
 
   <style type="text/css">
     <!--
-    table {border: 1px solid #ddd;}
+    table, td, th {border: 1px solid #ddd;}
     -->
   </style>
 
