--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -14,7 +14,7 @@ div.highlight {
 
 code {
   font-family:'Bitstream Vera Sans Mono','Courier', monospace;
-  background: #c0c0c0;
+  background: #eee;
 }
 
 .highlight .c { color: #586E75 } /* Comment */
