--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,4 +9,9 @@ layout: default
   <div class="entry">
     {{ content }}
   </div>
+
+  <div class="date">
+    Written on {{ page.date | date: "%Y-%m-%d" }}
+  </div>
+
 </article>
