--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -15,13 +15,13 @@
 	<!-- End Google Analytics -->
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analyticsga4 }}"></script>
 	<script>
 	window.dataLayer = window.dataLayer || [];
 	function gtag(){dataLayer.push(arguments);}
 	gtag('js', new Date());
 
-	gtag('config', '{{ site.google_analytics }}');
+	gtag('config', '{{ site.google_analyticsga4 }}');
 	</script>
 
 {% endif %}
